[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tube-fetch"
version = "0.1.0"
description = "Simple utilities for downloading and inspecting YouTube videos via yt-dlp"
readme = "README.md"
authors = [{name = "TubeFetch"}]
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2023.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
tube-fetch = "tube_fetch.cli:main"
